# modern-python-boilerplate

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
docs/: index.md  reference.md
reference/: index.html
search/: search_index.json
src/modern_python_boilerplate/: main.py
tests/: test_main.py
