[project]
name = "modern-python-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Corentin Meyer", email = "contact@cmeyer.fr" },
]
maintainers = [
    { name = "Corentin Meyer", email = "contact@cmeyer.fr" }
]
dependencies = []

[project.urls]
Homepage = ""
Documentation = ""
Repository = ""
Issues = ""

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "ty",
    "twine",
    "build",
    "pre-commit",
    "rich",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project.scripts]
modern_python_boilerplate = "modern_python_boilerplate.main:hello_world"

[tool.ruff]
target-version = "py313"

[tool.coverage.run]
omit = ["tests/*"]
